ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-worker-ingress
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-kaba-wild-card
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "llm.kaba.dev"
      secretName: letsencrypt-kaba-key
  rules:
    - host: "llm.kaba.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-worker-service
                port:
                  number: 80
